[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherfield"
version = "0.4.3"
description = "AetherField runtime ephemeris"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "WitchMithras" }]
license = { text = "Other/Proprietary License" }

dependencies = [
  "pytz>=2023.3",
]

keywords = ["zodiac", "alignment", "celestial", "astronomy", "mirror"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/WitchMithras/aetherfield"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aetherfield*"]
exclude = ["tests*"]

[project.scripts]
aetherfield = "aetherfield.cli:main"